--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "node src/server.js",
     "seed:superadmin": "node src/scripts/superadmin.js",
+    "seed:admin": "node src/scripts/admin.js",
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
